# pssparser

./: .buildinfo  .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  PLAN.md  README.md  ast_class_hierarchy.html  ast_structure.html  ast_usage_guide.html  azure-pipelines.yml  checker_plugin_guide.html  cli.html  genindex.html  index.html  ivpm.yaml  objects.inv  package-lock.json  package.json  pss30_api.html  pss30_architecture.html  pss30_features.html  pss30_migration.html  pyproject.toml  pytest.ini  quickstart.html  reference_api_docs.html  requirements.txt  requirements_ci.txt  requirements_docs.txt  search.html  searchindex.js  setup.cfg  setup.py  tsconfig.json
examples/pss_naming_checker/: README.rst  setup.cfg
examples/pss_naming_checker/src/pss_naming/: checker.py
examples/pss_naming_checker/tests/: test_naming_checker.py
src/: AssocDataTypeScope.cpp  AssocDataTypeScope.h  AssocDataTypeScopeSizeof.cpp  AssocDataTypeScopeSizeof.h  AstBuilder.cpp  AstBuilder.h  AstBuilderInt.cpp  AstBuilderInt.h  AstLinker.cpp  AstLinker.h  AstMerger.cpp  AstMerger.h  AstNameResolverClient.cpp  AstNameResolverClient.h  AstNamespace.cpp  AstNamespace.h  AstSymbol.cpp  AstSymbol.h  AstSymbolTable.cpp  AstSymbolTable.h  AstSymbolTableIterator.cpp  AstSymbolTableIterator.h  AstTypeDecl.cpp  AstTypeDecl.h  AstUtil.cpp  AstUtil.h  BaseMarkerListener.cpp  BaseMarkerListener.h  BuiltinsFactory.cpp  BuiltinsFactory.h  CMakeLists.txt  Factory.cpp  Factory.h  Formatter.cpp  Formatter.h  IMarkerListener.h  Marker.cpp  Marker.h  MarkerCollector.cpp  MarkerCollector.h  (+82 more)
src/apps/: pssformat_main.cpp
src/include/pssp/: FactoryExt.h  IAstBuilder.h  IBuiltinTypes.h  IFactory.h  ILinker.h  ILookupLocationResult.h  IMarker.h  IMarkerCollector.h  IMarkerListener.h  INameResolver.h  INameResolverClient.h  INamespace.h  IParseProfileInfo.h  ISymbol.h  ISymbolRef.h  ISymbolResolver.h  ISymbolScope.h  ISymbolTable.h  ISymbolTableIterator.h  ITaskFindElementByLocation.h  ITypeDecl.h  IVal.h  IValArray.h  IValFactory.h  IValInt.h  IValStr.h  IValStruct.h  IValVisitor.h  SymbolKindE.h
src/include/pssp/impl/: ISymbol.h  Loader.h  NameResolverClientBase.h  ScopeUtil.h  TaskClearLinks.h  TaskCloneSymbolScope.h  TaskComputeTypePackedSize.h  TaskCopyAst.h  TaskEvalExpr.h  TaskGetAstRoot.h  TaskGetElemSymbolScope.h  TaskGetFieldType.h  TaskGetName.h  TaskIndexField.h  (+11 more)
src/parser/: AstBuilder.cpp  AstBuilder.h  AstBuilderInt.cpp  AstBuilderInt.h  CMakeLists.txt  IMarkerListener.h  Location.h  Marker.cpp  Marker.h  MarkerCollector.cpp  MarkerCollector.h  MarkerSeverityE.h  PSS.g4
src/pssparser/: __main__.py  cu_parser.py  parser.py
src/pssparser/model/: StmtBase.py  __init__.py  action_type.py  activity_join_branch.py  activity_join_first.py  activity_join_none.py  activity_join_select.py  activity_stmt_base.py  activity_stmt_bind.py  activity_stmt_constraint.py  activity_stmt_do_while.py  activity_stmt_foreach.py  activity_stmt_if_else.py  activity_stmt_parallel.py  activity_stmt_repeat.py  activity_stmt_replicate.py  activity_stmt_schedule.py  activity_stmt_scope.py  activity_stmt_select.py  activity_stmt_select_branch.py  activity_stmt_sequence.py  activity_stmt_traverse_handle.py  activity_stmt_while.py  attr_decl_stmt.py  attr_type.py  buffer_type.py  compilation_unit.py  compile_assert.py  compile_if.py  component_path.py  component_type.py  composite_stmt.py  composite_type.py  constraint_block.py  constraint_declaration.py  constraint_default.py  constraint_default_disable.py  constraint_expression.py  constraint_forall.py  constraint_foreach.py  (+86 more)
src/pssparser/visitors/: find_types_visitor.py  link_visitor.py
src/python/pssparser/: __main__.py  cu_parser.py  parser.py  pssc.py
src/sav/: Formatter.cpp  Formatter.h  Location.cpp
src/stdlib/: addr_reg_pkg.pss  executor_pkg.pss  mk_pssstdlib.py  packed_s.pss  std_pkg.pss  sync_pkg.pss
src/ts/: tsconfig.json  tsconfig.tsbuildinfo
src/ts/src/: CUParser.ts
tests/: CMakeLists.txt
tests/python/: conftest.py  test_helpers.py  test_link_error.py  test_load.py  test_lookup.py  test_parser.py  test_profiling.py
tests/python/checkers/: conftest.py  test_checker_integration.py  test_checkerbase.py  test_cli_checker_flags.py  test_context.py  test_core_codes.py  test_manager.py  test_markerdef.py
tests/python/cli/: __init__.py  test_cli_parse.py  test_diagnostics.py  test_output_formats.py  test_source_context.py  test_suggestion.py
tests/python/errors/: test_crash_safety.py  test_error_api.py  test_resolution_errors.py  test_syntax_errors.py  test_type_extension_errors.py
tests/python/linking/: test_import_link.py  test_link_overlay.py  test_name_resolution.py  test_procedural_var_resolution.py  test_reg_model_semantics.py  test_resolution_depth.py  test_template_specialization_semantics.py  test_type_extension_semantics.py
tests/python/parsing/: test_access_modifiers.py  test_action_initializers_31.py  test_actions.py  test_activities.py  test_activity_scheduling.py  test_addr_space_group.py  test_address_spaces.py  test_advanced_constraints.py  test_annotations_31.py  test_ast_node_probes.py  test_atomic_blocks.py  test_behavioral_coverage.py  test_collection_methods.py  test_collections.py  test_compile_time.py  test_compile_time_semantics.py  test_component_instance_31.py  test_components.py  test_constraint_depth.py  test_constraints.py  test_coverage.py  test_data_types.py  test_dataflow.py  test_default_constraints.py  test_enum_extensions.py  test_enums.py  test_exec_variants.py  test_executors.py  test_export_function_31.py  test_expressions.py  test_float_types.py  test_forall_constraints.py  test_functions.py  test_generic_constraints_31.py  test_monitors.py  test_override_action_31.py  test_packages.py  test_parse_errors.py  test_pools_bind.py  test_procedural_statements.py  (+11 more)
tests/python/source_references/: test_docstrings.py  test_location_tracking.py  test_lookup_location_api.py
tests/python/spec_examples/: __init__.py  test_curated_examples.py
tests/src/: TestParseSpecExamples.cpp  TestParseSpecExamples.h
(+300 files in other folders)
