[metadata]
name = pss-naming-checker
version = 0.1.0
description = Example pssparser checker plug-in: PSS naming conventions
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Example Author
license = Apache-2.0
python_requires = >=3.9

[options]
package_dir =
    = src
packages = find:
install_requires =
    pssparser

[options.packages.find]
where = src

[options.entry_points]
pssparser.checkers =
    naming-convention = pss_naming.checker:NamingConventionChecker
